--- a/client/package.json
+++ b/client/package.json
@@ -9,7 +9,12 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore"
   },
   "dependencies": {
-    "vue": "^3.2.29"
+    "@vee-validate/zod": "^4.5.11",
+    "pinia": "^2.0.13",
+    "vee-validate": "^4.5.11",
+    "vue": "^3.2.29",
+    "vue-router": "^4.0.14",
+    "zod": "^3.14.4"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.1.0",
