--- a/client/package.json
+++ b/client/package.json
@@ -9,26 +9,29 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore"
   },
   "dependencies": {
-    "@vee-validate/zod": "^4.8.4",
-    "pinia": "^2.0.33",
-    "vee-validate": "^4.8.4",
-    "vue": "^3.2.47",
-    "vue-router": "^4.1.6",
-    "zod": "^3.21.4"
+    "@vee-validate/zod": "^4.11.1",
+    "pinia": "^2.1.6",
+    "vee-validate": "^4.11.1",
+    "vue": "^3.3.4",
+    "vue-router": "^4.2.4",
+    "zod": "^3.22.1"
   },
   "devDependencies": {
-    "@rushstack/eslint-patch": "^1.2.0",
-    "@types/node": "^18.15.11",
-    "@vitejs/plugin-vue": "^4.1.0",
-    "@vue/eslint-config-prettier": "^7.1.0",
-    "@vue/eslint-config-typescript": "^11.0.2",
-    "@vue/tsconfig": "^0.1.3",
-    "eslint": "^8.37.0",
-    "eslint-plugin-vue": "^9.10.0",
-    "prettier": "^2.8.7",
-    "sass": "^1.60.0",
-    "typescript": "~5.0.3",
-    "vite": "^4.2.1",
-    "vue-tsc": "^1.2.0"
+    "@rushstack/eslint-patch": "^1.3.3",
+    "@tsconfig/node18": "^18.2.0",
+    "@types/jsdom": "^21.1.1",
+    "@types/node": "^18.17.0",
+    "@vitejs/plugin-vue": "^4.3.1",
+    "@vue/eslint-config-prettier": "^8.0.0",
+    "@vue/eslint-config-typescript": "^11.0.3",
+    "@vue/test-utils": "^2.4.1",
+    "@vue/tsconfig": "^0.4.0",
+    "eslint": "^8.47.0",
+    "eslint-plugin-vue": "^9.17.0",
+    "prettier": "^3.0.2",
+    "sass": "^1.65.1",
+    "typescript": "~5.1.6",
+    "vite": "^4.4.9",
+    "vue-tsc": "^1.8.8"
   }
 }
