--- a/client/tsconfig.node.json
+++ b/client/tsconfig.node.json
@@ -2,6 +2,10 @@
   "extends": "@tsconfig/node18/tsconfig.json",
   "include": [
     "vite.config.*",
+    "vitest.config.*",
+    "cypress.config.*",
+    "nightwatch.conf.*",
+    "playwright.config.*"
   ],
   "compilerOptions": {
     "composite": true,
